@startuml

title __JFXMODEL's Class Diagram__\n

  namespace de.vogella.algorithms.dijkstra.model {
    namespace jfxmodel {
      class de.vogella.algorithms.dijkstra.model.jfxmodel.Point3DEdge {
          - d : double
          + Point3DEdge()
          + equals()
          + getDestination()
          + getId()
          + getSource()
          + getWeight()
          + hashCode()
          + toString()
      }
    }
  }
  

  namespace de.vogella.algorithms.dijkstra.model {
    namespace jfxmodel {
      class de.vogella.algorithms.dijkstra.model.jfxmodel.Point3DVertex {
          ~ point : Point3D
          + Point3DVertex()
          + Point3DVertex()
          + equals()
          + getId()
          + getName()
          + getPoint()
          + hashCode()
          + toString()
      }
    }
  }
  

  de.vogella.algorithms.dijkstra.model.jfxmodel.Point3DEdge .up.|> de.vogella.algorithms.dijkstra.model.IEdge
  de.vogella.algorithms.dijkstra.model.jfxmodel.Point3DEdge o-- de.vogella.algorithms.dijkstra.model.jfxmodel.Point3DVertex : source
  de.vogella.algorithms.dijkstra.model.jfxmodel.Point3DEdge o-- de.vogella.algorithms.dijkstra.model.jfxmodel.Point3DVertex : target
  de.vogella.algorithms.dijkstra.model.jfxmodel.Point3DVertex .up.|> de.vogella.algorithms.dijkstra.model.IVertex


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
